<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.com.cesarcorona.proyeccciondegastos.MainActivity">


    <LinearLayout
        android:weightSum="100"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_weight="10"
            android:layout_height="0dp">

            <TextView
                android:textSize="22sp"
                android:textColor="#FFF"
                android:text="@string/app_name"
                android:layout_marginLeft="20dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/add_person_button"
                android:src="@drawable/ic_person_add_white_48dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_width="50dp"
                android:layout_height="50dp" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/content_fragment"
            android:layout_weight="80"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </FrameLayout>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_weight="10"
            card_view:cardElevation="20dp"
            card_view:cardCornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/home_tab"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/home_icon"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_home_white_36dp"
                        android:tint="#000"
                        android:layout_margin="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:id="@+id/home_text"
                        android:textColor="#000"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:text="@string/title_home"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/resumen_tab"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/resumen_icon"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_assignment_white_36dp"
                        android:tint="#FFF"
                        android:layout_margin="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:id="@+id/resumen_text"
                        android:textColor="#FFF"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:text="@string/title_resumen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/data_tab"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/data_icon"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_dashboard_white_36dp"
                        android:tint="#FFF"
                        android:layout_margin="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:id="@+id/data_text"
                        android:textColor="#FFF"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:text="@string/title_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/familia_tab"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/familia_icon"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_group_white_36dp"
                        android:tint="#FFF"
                        android:layout_margin="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                    <TextView
                        android:id="@+id/familia_text"
                        android:textColor="#FFF"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:text="@string/title_familia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>




            </LinearLayout>




        </android.support.v7.widget.CardView>






    </LinearLayout>







</LinearLayout>
